# godel

./: README.md  godel.rosinstall
godel_robots/abb/godel_irb2400/godel_irb2400_support/: CMakeLists.txt
godel_robots/abb/godel_irb2400/godel_irb2400_support/launch/: irb2400_blending_client.launch  irb2400_blending_server.launch
godel_robots/abb/godel_irb2400/godel_irb2400_support/urdf/: abb_blending_eff_macro.xacro
godel_robots/godel_robot_resources/: CMakeLists.txt
godel_session/: CMakeLists.txt  package.xml  readme
godel_session/config/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml  godel_blending_parameters.msg  godel_robot_scan_parameters.msg  godel_scan_parameters.msg  godel_surface_detection_parameters.msg
godel_surface_detection/src/nodes/: robot_auto_blending.cpp
industrial_robot_simulator_service/launch/: start_simulation_server.launch
