<?xml version="1.0"?>
<package>
  <name>godel_session</name>
  <version>0.0.1</version>
  <description>The godel_session package</description>

  <maintainer email="chengcheng@gmail.com">chengcheng</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
